--- a/css/singleMovie.css
+++ b/css/singleMovie.css
@@ -1,7 +1,96 @@
-#searchIdButton {
-  width: 3%;
+body{
+  background-color: rgb(19, 19, 19);
+ 
 }
 
-.try {
-  color:red
+.pageClass{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5%;
+}
+
+.searchInputAndBtn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height: 5rem;
+}
+#searchByIdInput{
+  border: #840303;
+  background-color: #851616;
+  color: #efe7e7;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+  font-size: 300%;
+  
+}
+
+#searchIdButton {
+  color: #dcd9d9;
+  font-size: 400%;
+}
+
+.moviePresentation{
+  color: #ffffff;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color:#b8b1b195
+}
+
+.movieImgAndMore{
+  display: flex;
+
+}
+
+.posterImg{
+  width: 65%;
+  height: 20%;
+  margin-left: 20%;
+}
+
+#movieTitle{
+  font-size: 300%;
+  font-weight: bolder;
+}
+
+.castTitel{
+  text-align: center;
+  font-size: 230%;
+  font-weight: bolder;
+  color: rgb(103, 7, 7);
+}
+
+.castCard{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items:center ;
+  align-content: space-between;
+}
+
+.imgAndName{
+  width: 40%;
+  justify-content: space-around;
+  row-gap: 20%;
+  font-size: 150%;
+ 
+
+
+  
+
+}
+
+.imgCast{
+  width: 10%;
+  height: 10%;
+  border-radius: 50% 50% ;
+
+
 }
