--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,29 @@
 body {
   background-color: rgb(19, 19, 19);
 }
+#movieTitel{
+  font-size: 200%;
+  font-weight: 300;
+  color: #b30b0b;
+  text-shadow: 2px 1px 1px black;
+  font-family:sans-serif;
+  animation:blinkAndMove 3s infinite;
+}
 
+@keyframes blinkAndMove {
+  0% {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+  50% {
+    opacity: 0;
+    transform: translateX(10px) scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+}
 
 .btnsDayAndWeekDiv {
   display: flex;
@@ -87,14 +109,14 @@ body {
 
 .moviesPresentationClass {
   display: flex;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 2rem;
 }
 
 .movie-card {
   color: rgb(201, 196, 196);
-  width: 15%;  
+  width: 15%;
   margin: 0 1%;
   box-shadow: 0 4px 20px rgba(255, 251, 251, 0.1);
   transition: box-shadow 0.3s ease-in-out;
@@ -104,6 +126,41 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+@media (max-width: 768px) {
+  .moviesPresentationClass {
+    flex-direction: row;
+  }
+
+  .movie-card {
+    width: 20%; /* שלושה כרטיבים בשורה */
+    margin: 2% 1%;
+  }
+}
+
+@media (max-width: 576px) {
+  .moviesPresentationClass {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 35px; /* הרווח בין כרטיבים */
+  }
+
+  .movie-card {
+    width: 70%;
+    margin: 0;
+  }
+
+  .btnDayAndWeek {
+    width: 30%;
+    font-size: 120%;
+    font-weight: bolder;
+
+
+  
+  }
+}
+
 
 @keyframes fadeIn {
   from { opacity: 0; }
@@ -193,4 +250,67 @@ body {
 .movie-card .heart-icon:hover {
   cursor: pointer;
   color: #ff0000;
+}
+
+
+.footer-basic {
+  padding:40px 0;
+  background-color:#181717;
+  color:rgb(202, 40, 40);
+  width: 100%;
+  
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+  color: #fff;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.4;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:rgb(202, 40, 40);
+  margin-bottom:0;
 }
