--- a/css/singleMovie.css
+++ b/css/singleMovie.css
@@ -3,6 +3,30 @@ body{
  
 }
 
+#movieTitel{
+  font-size: 200%;
+  font-weight: 300;
+  color: #b30b0b;
+  text-shadow: 2px 1px 1px black;
+  font-family:sans-serif;
+  animation:blinkAndMove 3s infinite;
+}
+
+@keyframes blinkAndMove {
+  0% {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+  50% {
+    opacity: 0;
+    transform: translateX(10px) scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+}
+
 .pageClass{
   display: flex;
   flex-direction: column;
@@ -17,16 +41,44 @@ body{
   width: 40%;
   height: 5rem;
 }
-#searchByIdInput{
-  border: #840303;
+
+#searchByIdInput {
+  text-align: center;
+  border: 2px solid #840303; 
   background-color: #851616;
-  color: #efe7e7;
+  color: #ffffff;
   border-radius: 20px;
   width: 100%;
   height: 100%;
   font-weight: bold;
-  font-size: 300%;
-  
+  font-size: 24px; 
+  transition: border-color 1s ease-in-out;
+  animation: colorChange 4s infinite;
+}
+
+@keyframes colorChange {
+  0% {
+    border-color: red;
+    color: #ffffff;
+
+  }
+  25% {
+    border-color: rgb(195, 48, 48);
+
+  }
+  50% {
+    border-color: rgb(159, 67, 67);
+    color: #ffffff;
+
+  }
+  75% {
+    border-color: rgb(205, 151, 151);
+    color: #ffffff;
+
+  }
+  100% {
+    border-color: rgb(96, 3, 3);
+  }
 }
 
 #searchIdButton {
@@ -94,3 +146,4 @@ body{
 
 
 }
+
