--- a/css/singleMovie.css
+++ b/css/singleMovie.css
@@ -3,27 +3,33 @@ body{
  
 }
 
-#movieTitel{
+#movieTitel {
   font-size: 200%;
   font-weight: 300;
   color: #b30b0b;
   text-shadow: 2px 1px 1px black;
-  font-family:sans-serif;
-  animation:blinkAndMove 3s infinite;
+  font-family: sans-serif;
+  animation: blinkAndChangeColors 2s infinite;
 }
 
-@keyframes blinkAndMove {
-  0% {
-    opacity: 1;
-    transform: translateX(0) scale(1);
+@keyframes blinkAndChangeColors {
+  0%, 100% {
+      opacity: 1;
+      transform: translateX(0) scale(1);
+      color: #b30b0b; 
   }
-  50% {
-    opacity: 0;
-    transform: translateX(10px) scale(0.8);
+  20% {
+      color: #da4b4b;
   }
-  100% {
-    opacity: 1;
-    transform: translateX(0) scale(1);
+  40% {
+      color: #621d1d;
+      text-shadow: 2px 2px 1px rgb(255, 255, 255);
+  }
+  60% {
+    color: #e76666; 
+}
+  80% {
+      color: #a91616;
   }
 }
 
@@ -132,18 +138,59 @@ body{
   justify-content: space-around;
   row-gap: 20%;
   font-size: 150%;
- 
-
-
-  
-
 }
 
 .imgCast{
   width: 10%;
   height: 10%;
   border-radius: 50% 50% ;
+}
+
+@media (max-width: 768px) {
+  .moviesPresentationClass {
+    flex-direction: row;
+  }
+
+  .searchInputAndBtn{
+    width: 50%;
+    height: 2.5rem;
+    margin-bottom: 3rem;
+  }
+
+  #searchIdButton {
+    font-size: 250%;
+  }
+
+  #movieTitle{
+    font-size: 200%;
+  }
+
+  .castTitel{
+    font-size: 150%;
+
+  }
+  .imgAndName{
+    font-size: 75%;
+  }
+
+  .imgCast{
+    width: 12%;
+    height: 12%;
+    border-radius: 50% 50% ;
+  }
+
+
 
 
 }
 
+@media (max-width: 576px) {
+  .moviesPresentationClass {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 35px; 
+  }
+
+
+}
