--- a/css/about.css
+++ b/css/about.css
@@ -1,181 +1,75 @@
 body {
     background-color: rgb(19, 19, 19);
   }
+  
 
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-#movieTitel{
+#movieTitel {
   font-size: 200%;
   font-weight: 300;
   color: #b30b0b;
   text-shadow: 2px 1px 1px black;
-  font-family:sans-serif;
-  animation:blinkAndMove 3s infinite;
+  font-family: sans-serif;
+  animation: blinkAndChangeColors 2s infinite;
 }
 
-@keyframes blinkAndMove {
-  0% {
-    opacity: 1;
-    transform: translateX(0) scale(1);
+@keyframes blinkAndChangeColors {
+  0%, 100% {
+      opacity: 1;
+      transform: translateX(0) scale(1);
+      color: #b30b0b; 
   }
-  50% {
-    opacity: 0;
-    transform: translateX(10px) scale(0.8);
+  20% {
+      color: #da4b4b;
   }
-  100% {
-    opacity: 1;
-    transform: translateX(0) scale(1);
+  40% {
+      color: #621d1d;
+      text-shadow: 2px 2px 1px rgb(255, 255, 255);
+  }
+  60% {
+    color: #e76666; 
+}
+  80% {
+      color: #a91616;
   }
 }
 
-.main {
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url('bg-img.webp');
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-
-.main::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgb(19, 19, 19);
-}
-
-section {
-  position: relative;
-  z-index: 3;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.container {
-  max-width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.section-header {
-  margin-bottom: 50px;
+.aboutTitel{
   text-align: center;
+  font-weight: 30px;
+  font-size: 300%;
+  color: #ccc;
+  padding: 2%;
 }
 
-.section-header h2 {
-  color: #990707;
-  font-weight: bold;
-  font-size: 3em;
-  margin-bottom: 20px;
-}
-
-.section-header p {
-  color: #FFF;
-}
-
-.box4{
-
+.container{
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  flex-direction: column;
 }
 
-.box1{
-  width: 40%;
-  color: #FFF;
-  justify-content: space-around;
-  border: 4px solid red;
-  border-radius: 25px;
-  padding: 1%;
 
-}
-
-.row  {
+.box4 {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  row-gap: 10%;
 }
 
-.about-info {
-  width: 50%;
-}
-
-.about-info-item {
-  display: flex;
-  margin-bottom: 30px;
-}
-
-.about-info-icon {
-  height: 300px;
-  width: 300px;
-  background-image: url(../images/תמונת\ פרופיל\ ריבוע\ קטן.jpeg);
-  border-radius: 50%;
-}
-
-
-.my-info  {
-    color: #ffffff;
-    font-size: 1.4em;
-    text-align: center;
-    margin-top: 320px;
-  }
-
-
-
-.about-form {
-  background-color: #fff;
-  padding: 40px;
-  width: 45%;
-  padding-bottom: 20px;
-  padding-top: 20px;
-}
-
-.about-form h4 {
-  font-weight: bold;
-  font-size: 2em;
-  margin-bottom: 10px;
-  color: #990707;
+.box1 {
+  width: 30rem;
+  height:18rem;
+  color: #ddd;
+  justify-content: space-around;
+  border: 4px solid #b30b0b;
+  border-radius: 25px;
+  padding: 1%;
+  font-size: 20px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 
-
-
-
-@media (max-width: 600px) {
-  section {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-  
-  .row {
-    flex-direction: column;
-  }
-  
-  .about-info {
-    margin-bottom: 40px;
-    width: 100%;
-  }
-  
-  .about-form {
-    width: 100%;
-  }
-}
 
 .footer-basic {
   padding:40px 0;
