--- a/css/searchMovie.css
+++ b/css/searchMovie.css
@@ -2,29 +2,35 @@ body {
     background-color: rgb(19, 19, 19);
   }
 
-  #movieTitel{
+  #movieTitel {
     font-size: 200%;
     font-weight: 300;
     color: #b30b0b;
     text-shadow: 2px 1px 1px black;
-    font-family:sans-serif;
-    animation:blinkAndMove 3s infinite;
-  }
+    font-family: sans-serif;
+    animation: blinkAndChangeColors 2s infinite;
+}
 
-  @keyframes blinkAndMove {
-    0% {
-      opacity: 1;
-      transform: translateX(0) scale(1);
+@keyframes blinkAndChangeColors {
+    0%, 100% {
+        opacity: 1;
+        transform: translateX(0) scale(1);
+        color: #b30b0b; 
     }
-    50% {
-      opacity: 0;
-      transform: translateX(10px) scale(0.8);
+    20% {
+        color: #da4b4b;
     }
-    100% {
-      opacity: 1;
-      transform: translateX(0) scale(1);
+    40% {
+        color: #621d1d;
+        text-shadow: 2px 2px 1px rgb(255, 255, 255);
     }
+    60% {
+      color: #e76666; 
   }
+    80% {
+        color: #a91616;
+    }
+}
 
   .pageClass{
     display: flex;
@@ -79,14 +85,14 @@ body {
 
   .moviesPresentationClass {
     display: flex;
-    flex-wrap: wrap;  
+    flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 2rem;
   }
   
   .movie-card {
     color: rgb(201, 196, 196);
-    width: 15%;  
+    width: 15%;
     margin: 0 1%;
     box-shadow: 0 4px 20px rgba(255, 251, 251, 0.1);
     transition: box-shadow 0.3s ease-in-out;
@@ -95,6 +101,56 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  
+  @media (max-width: 768px) {
+    .moviesPresentationClass {
+      flex-direction: row;
+    }
+  
+    .movie-card {
+      width: 20%; 
+      margin: 2% 1%;
+    }
+    #searchMoviesByNameBtn{
+      color: #dcd9d9;
+      font-size: 200%;
+    }
+
+    #searchMoviesByName {
+      width: 150%;
+      height: 50%;
+      font-size: 15px; 
+    
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .moviesPresentationClass {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 35px; 
+    }
+  
+    .movie-card {
+      width: 70%;
+      margin: 0;
+    }
+    #searchMoviesByNameBtn{
+      color: #dcd9d9;
+      font-size: 150%;
+    }
+    #searchMoviesByName {
+      width: 12rem;
+      height: 40%;
+      font-size: 12px; 
+    
+    }
+
+    
+  
+
   }
   
   @keyframes fadeIn {
